--- a/scripts/common/cron_tab.conf
+++ b/scripts/common/cron_tab.conf
@@ -8,7 +8,7 @@ MAILTO=""
 * * * * * /bin/bash /azs/common/cron_job.sh tenant_portal /azs/cli/jobs/tenant_portal.sh
 * * * * * /bin/bash /azs/common/cron_job.sh tenant_storage /azs/cli/jobs/tenant_storage.sh
 # Service jobs run every 5 minutes, starting at different minutes.
-1-59/5 * * * * /bin/bash /azs/common/cron_job.sh srv_pnu /azs/cli/shared/srv_pnu.sh
+1 * * * * /bin/bash /azs/common/cron_job.sh srv_pnu /azs/cli/shared/srv_pnu.sh
 2-59/5 * * * * /bin/bash /azs/common/cron_job.sh srv_blob /azs/cli/shared/srv_blob.sh
 # Export the previous week to CSV, run every day at 4:05am
 5 4 * * * /bin/bash /azs/common/cron_job.sh srv_csv /azs/cli/shared/srv_csv.sh
